// 2.55 Change Log
// Updated 10th June, 2022

//A107

Fix textfield breaking
Expand masked blitting options
Include paths via script, update std_zh
	( EmilyV, 10th June, 2022 )

fix launcher textfields able to be too large
fix advpaste dialog overlapping checkboxes
fix item drag issues, arrow 'block combo' issues
Fix dmap editor map preview misalign
Add 'Block Weapon (Custom)' combo type
	( EmilyV, June 9th, 2022 )

fix random memory access in combo help string
	( EmilyV, June 6th, 2022 )

Fix mapdata->Enemy[] crash
Fix cheat mod keys, AGAIN!
	( EmilyV, May 31st, 2022 )

Allow conveyors to work on layers
	( EmilyV, May 30th, 2022 )

fix setting dir resetting walk animation
fix zscript hanging during specific edge-case
	( EmilyV, May 26th, 2022 )

Remove ZCL close warning
Fix 'Z' in tile editor being weird/taking multiple snapshots
Fix zinfo overwrite when grabbing tiles from .qst
	( EmilyV, May 22nd, 2022 )

Fix hero gets stuck on corners of "walk on top" switchblocks
Fix custom quest selection bug
Fix subscreen override items being invisible in zq
	( EmilyV, May 21st, 2022 )

Fix 'Enemies->Secret' weirdness
	( EmilyV, May 14th, 2022 )

Add string fix tool
	( EmilyV, May 13th, 2022 )

-- May 11th nightly build

Add floating selection to tile editor
	-A 'selected' area can now be moved
	-Moving the selected area causes it to "float" above the rest of the tile
	-While floating, it does not overwrite the pixels 'below' it
	-Upon changing the selection or saving, it 'falls', merging back into the tile.
	( EmilyV, May 11th, 2022 )

Fix enemies causing death SFX when they shouldn't
	( EmilyV, May 9th, 2022 )

Add zscript angled weapon features
	( DeeDee, May 9th, 2022 )
	
Fix separate 'item override' active shields not using
	the correct shield.
Fix several issues related to large items
	-Large bottles now display correctly
	-With a compat rule for old behavior, engine subscreen selectors
		will now stretch to fit sized items on the subscreen (uses hit sizes)